syntax = "proto3";
package wiradata.ledgers;

option go_package = "pb/ledgers;ledgers";
option java_package = "com.wiradata.erpapplication.ledgers";
option java_multiple_files = true;

import "ledgers/chart_of_account_message.proto";

message AccConfiguration {
  string id = 1;
  string name = 2;
}

message AccConfigurationDetail {
  string id = 1;
  AccConfiguration acc_configuration = 2;
  ChartOfAccount chart_of_account = 3;
}